--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ dataclasses==0.8
 Flask==2.0.3
 Flask-JWT==0.3.2
 Flask-RESTful==0.3.9
+Flask-SQLAlchemy==2.5.1
+greenlet==1.1.2
 importlib-metadata==4.8.3
 itsdangerous==2.0.1
 Jinja2==3.0.3
@@ -11,6 +13,7 @@ MarkupSafe==2.0.1
 PyJWT==1.4.2
 pytz==2022.1
 six==1.16.0
+SQLAlchemy==1.4.34
 typing_extensions==4.1.1
 Werkzeug==2.0.3
 zipp==3.6.0
